<resources>

    <string name="title_msg">Project 470</string>
    <string name="login_btn">LOGIN</string>
    <string name="phone_number">Enter Phone Number</string>
    <string name="gen_otp">GENERATE OTP</string>
    <string name="app_name">Project470</string>
    <string name="otp">Enter OTP</string>
    <string name="last_loc">Last Known Location</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Enter your Name</string>
    <string name="dob">Enter Date of Birth</string>
    <string name="upload_btn">Upload Photo</string>
    <string name="exp">Enter Years of Experience</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_language">Language</string>
    <string name="pref_title_lang_frequency">Choose Default Language</string>
    <string-array name="pref_lang_frequency_titles">
        <item>English</item>
        <item>Hindi</item>
        <item>Gujarati</item>
        <item>Marathi</item>
    </string-array>
    <string-array name="pref_lang_frequency_values">
        <item>English</item>
        <item>Hindi</item>
        <item>Gujarati</item>
        <item>Marathi</item>
    </string-array>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="submit_info">SUBMIT</string>
</resources>