<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/phone_number"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/phone_number"
            android:ems="10"
            android:hint="@string/otp"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_generate_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gen_otp" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn" />

    </LinearLayout>

</RelativeLayout>